# Getl фичи * getl.dbf: добавлена работа с DBF файлами на чтение с помощью DBFConnection и DBFDataset. Поддерживается чтение форматов DBF до DBASE 7, FoxPro и Visual FoxPro. * getl.files.Manager: добавлено свойство checkDateSizeFile, при включении которого файл не считается обработанным в истории, если у него не совпадает размер или время изменения.
# Getl баги
* getl.tfs.TFD: при каждом новом создании датасета через функцию Dataset, создавалась новая база данных TDS в памяти.
* getl.proc.Executor: при shutdown виртуальной машины не отслеживались запущенные Executor потоки. Теперь автоматически потокам посылается сигнал завершения, а ждущие на выполнения в очереди потоки снимаются с работы.